@@ -7,7 +7,8 @@ Jump Start Changelog
 * Updated Theme Blvd framework to 2.4.2
 * Minor styling fixes for upcoming WP 3.9.
 * Minor improvements to Mini Post Grids.
-* Fixed some non working options with recently added `[gallery_slider]`
+* Fixed some non working options with recently added `[gallery_slider]`.
+* Fixed error when installing theme recommended plugins in bulk under *Appearance > Theme Plugins*.
 
 --------------------------------------------------------------
 
